--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="./menu.css">
+		<script src="https://kit.fontawesome.com/944fa57a4f.js" crossorigin="anonymous"></script>
 		<title>SNCF</title>
 	</head>
 
@@ -13,25 +14,33 @@
 		</header>
 		<nav>
 			<ul>
-			<li class="menu-deroulant">
-				<a href="#">Salades</a>
-				<ul class="sous-menu">
-				  <li><a href="#">Salade Niçoise</a></li>
-				  <li><a href="#">Salade César</a></li>
-				  <li><a href="#">Salade Végétarienne</a></li>
-				  <li><a href="#">Salade Nordique</a></li>
+
+
+			<li class="nav_deroulante"><i class="fas fa-hamburger"></i><a href="#">Burgers</a>
+				<ul class="sous_nav">
+					<li><a href="#">Cheese Burger</a></li>
+					<li><a href="#">Hamburger</a></li>
+					<li><a href="#">Burger Savoyard</a></li>
+				</ul>
+			</li>
+
+			<li class="nav_deroulante"><i class="fas fa-pizza-slice"></i><a href="#">Pizzas</a>
+				<ul class="sous_nav">
+				  <li><a href="#">Pizza 4 Fromages</a></li>
+				  <li><a href="#">Pizza Reine</a></li>
+				  <li><a href="#">Pizza Régina</a></li>
+				  <li><a href="#">Pizza Végétarienne</a></li>
 				</ul>
 			  </li>
 
-			<li class="menu-deroulant">
-				<a href="#">Sandwichs</a>
-					<ul class="sous-menu">
-				  <li><a href="#">Sandwich Niçoise</a></li>
-				  <li><a href="#">Salade César</a></li>
-				  <li><a href="#">Salade Végétarienne</a></li>
-				  <li><a href="#">Salade Nordique</a></li>
+			<li class="nav_deroulante"><i class="fas fa-coffee"></i><a href="#">Boissons</a>
+				<ul class="sous_nav">
+				  <li><a href="#">Evian</a></li>
+				  <li><a href="#">San Pellegrino</a></li>
+				  <li><a href="#">Café</a></li>
+				  <li><a href="#">Chocolat chaud</a></li>
 				</ul>
-				</li>
+			  </li>
 			</ul>
 		  </nav>
 	</body>
