--- a/cell03/ex01/balloon.html
+++ b/cell03/ex01/balloon.html
@@ -9,12 +9,14 @@
 
 
 	<body>
-		<div onclick="modifySize() && changeColor()"class="reddiv"></div>
+		<div  class="originalDiv"></div>
 	</body>
 
 	<script src="./balloon.js"></script>
 </html>
 
 <!--
-onmouseover
-onmouseout -->
+mouseover
+mouseout
+onclick="changeColor();"
+ -->
