--- a/Rush/index.html
+++ b/Rush/index.html
@@ -4,45 +4,53 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<script src="https://kit.fontawesome.com/944fa57a4f.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./Style/style.css">
 		<title></title>
 	</head>
 	<body>
+		<!-- <a id="haut"></a> -->
+		<!--Logo + Barre de navigation-->
 		<header>
 			<nav class="navbar">
 				<ul class="link">
 					<li class="container">
-						<a href="#">
-							<img src="./Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
+						<a href="./Pages/jbonnivard.html#main-about-julien">
+							<img src="./Images/stickers-masque-casa-de-papel.png" alt="avatar jbonniva"/>
 							<h1 class="title">jbonniva</h1>
 						</a>
 					</li>
 
+
 					<li class="container">
-						<a href="#">
+						<a href="./Pages/agondard.html#main-about-alexia">
 							<img src="./Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
 							<h1 class="title">agondard</h1>
 						</a>
 					</li>
 				</ul>
+
 			</nav>
 		</header>
 
-
-
-		<section>
+		<main>
 			<div class="container-logo">
-				<div class="img-background">
-					<img class="logo" src="./Images/Logo_Rush.png" alt="Logo société RUSH">
-				</div>
+					<div class="img-background">
+						<img class="logo" src="./Images/Logo_Rush.png" alt="Logo société RUSH">
+					</div>
 			</div>
-		</section>
-		<section>
 
-		</section>
+
+
+
+		</main>
+		<!-- <a href="#haut"><i class="fas fa-arrow-circle-up"></i></a> -->
 
 	<footer>
-
+		<div>
+			<p class="copyright text-center">RUSH - 42 | Paris © 2022</p>
+			<p class="copyright text-center"> Designed by Julien & Alexia</p>
+		</div>
 	</footer>
 	</body>
 </html>
