--- a/Rush/Pages/agondard.html
+++ b/Rush/Pages/agondard.html
@@ -43,32 +43,133 @@
 		</header>
 
 		<main id="cv">
+
 			<section id="main-about-alexia">
 				<div class="container-about">
 					<div class="about">
-						<h2>A B O U T</h2>
+						<h1 class="nom-prenom">
+							Alexia Gondard-Champagne
+						</h1>
 						<p><i class="fas fa-quote-left"></i> Jeune diplômée d'une formation en développement web,<br>je suis à votre disposition pour réaliser vos projets les plus fous! <i class="fas fa-quote-right"></i></p>
 					</div>
 					<div class="row">
 						<div class="container-presentation">
-							<h3>
-								Alexia Gondard-Champagne
-							</h3>
+							<h2>A B O U T</h2>
+
 							<p>Développeuse web & Étudiante à 42 Paris</p>
-							<div class="row">
-								<div class="col">
-									<ul>
-										<li><i class="fas fa-code"></i>Website</li>
-										<li><i class="fas fa-code"></i>Website</li>
-										<li><i class="fas fa-code"></i>Website</li>
-										<li><i class="fas fa-code"></i>Website</li>
-									</ul>
+							<div class="center">
+								<div class="row">
+									<div class="col">
+										<ul>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Date de naissance :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Website :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">N° de téléphone :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Ville :</span>
+												<span> 05.01.1990</span>
+											</li>
+										</ul>
+
+										<ul>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Age :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Diplôme :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Email :</span>
+												<span> 05.01.1990</span>
+											</li>
+											<li><i class="fas fa-code"></i>
+												<span class="categorie">Disponibilité :</span>
+												<span> 05.01.1990</span>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</div>
-
 						</div>
 					</div>
 			</section>
+
+			<hr>
+
+			<section id="main-skills-alexia">
+				<div class="container-skills">
+					<div class="container-skills-title">
+						<h1 class="template-title">C O M P E T E N C E S</h1>
+					</div>
+					<div class="container-all-skills">
+						<div class="row">
+							<div class="col">
+								<div class="progress">
+									<span class="title-skill">HTML5</span>
+									<p class="value-skill">100%</p>
+								<div class="progress-bar-container">
+									<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"
+
+								</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<hr>
+
+
+			<section id="main-xp-alexia">
+				<div class="experience">
+					<div class="container-experience-title">
+						<h1 class="template-title">E X P E R I E N C E S</h1>
+					</div>
+					<div class="container-all-experience">
+						<div class="container-experience">
+							<div class="container-title">
+								<h3 class="title">Chargée de la relation client</h3>
+								<h4 class="name">GEFIP | Paris</h4>
+							</div>
+							<div class="container-competences">
+							<ul>
+								<li><strong>Création et mise à jour des supports marketing</strong></li>
+								<li><strong>Mise à jour et maintien du site web</strong></li>
+								<li><strong>Organisation d’évènements</strong></li>
+								<li><strong>Commercialisation des fonds.</strong></li>
+							</ul>
+
+							</div>
+						</div>
+						<div class="container-experience">
+							<div class="container-title">
+								<h3 class="title">Conseillère clientèle clients haut de gamme</h3>
+								<h4 class="name">Divers établissements financiers | Paris</h4>
+							</div>
+							<div class="container-competences">
+								<ul>
+									<li><strong>Mise en place de crédits à la consommation et immobilier</strong></li>
+									<li><strong>Optimisation fisacle</strong></li>
+									<li><strong>Commercialisation des produits bancaires de base</strong></li>
+									<li><strong>Commercialisation des produits d'assurances : IARD & Prévoyance</strong></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 		<footer>
 			<div>
