--- a/Rush/Pages/agondard.html
+++ b/Rush/Pages/agondard.html
@@ -104,32 +104,59 @@
 					</div>
 			</section>
 
-			<hr>
-
-			<section id="main-skills-alexia">
+			<section id="main-skills-alexia" class="skills">
 				<div class="container-skills">
 					<div class="container-skills-title">
 						<h1 class="template-title">C O M P E T E N C E S</h1>
 					</div>
 					<div class="container-all-skills">
-						<div class="row">
-							<div class="col">
+						<div class="row skills-row">
+							<div class="col-skills">
 								<div class="progress">
 									<span class="title-skill">HTML5</span>
-									<p class="value-skill">100%</p>
-								<div class="progress-bar-container">
-									<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"
-
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
 								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">CSS3</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">JavaScript</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">C</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-
-			<hr>
-
 
 			<section id="main-xp-alexia">
 				<div class="experience">
@@ -170,6 +197,24 @@
 				</div>
 			</section>
 
+			<section id="contact">
+				<div class="container-contact">
+					<div class="container-contact-title">
+						<h1 class="template-title">C O N T A C T</h1>
+					</div>
+					<div class="row">
+						<div class="col-1">
+							<div class="info">
+								<div class="addresse">
+
+								</div>
+								<iframe src="https://www.google.com/maps/place/96+Bd+Bessi%C3%A8res,+75017+Paris/@48.896652,2.3161673,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66fa9e5c88119:0x75e95ba431790f9b!8m2!3d48.896652!4d2.318356?hl=fr"></iframe>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			<section>
 		</main>
 		<footer>
 			<div>
