--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -17,7 +17,7 @@
 					<td class="login"><h2>agondard</h2></td>
 					<td class="description">Alexia, la plus belle de 42 Paris!!!</td>
 					<td class="reseaux"><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i><i class="fab fa-linkedin"></i></td>
-					<td><button type="contact" id="contact">Contact</button></td>
+					<td><button type="submit" id="contact">Contact</button></td>
 				</tr>
 		</table>
 		</section>
