--- a/Rush/Pages/agondard.html
+++ b/Rush/Pages/agondard.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<script src="https://kit.fontawesome.com/944fa57a4f.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="../Style/style_profil.css">
+		<link rel="stylesheet" href="../Style/style_profil_alexia.css">
 		<title>Alexia Gondard-Champagne</title>
 	</head>
 	<body id="displayAlexia">
@@ -61,40 +61,41 @@
 								<div class="row">
 									<div class="col">
 										<ul>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Date de naissance :</span>
 												<span> 05.01.1990</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Website :</span>
-												<span> 05.01.1990</span>
+												<span> www.agondard.fr</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">N° de téléphone :</span>
-												<span> 05.01.1990</span>
+												<span> 07.82.58.29.91</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Ville :</span>
-												<span> 05.01.1990</span>
+												<span> Paris</span>
 											</li>
 										</ul>
-
+									</div>
+									<div class="col">
 										<ul>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Age :</span>
-												<span> 05.01.1990</span>
+												<span> 32 ans</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Diplôme :</span>
-												<span> 05.01.1990</span>
+												<span> Développeuse web</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Email :</span>
-												<span> 05.01.1990</span>
+												<span> agondard@student.42.fr</span>
 											</li>
-											<li><i class="fas fa-code"></i>
+											<li>
 												<span class="categorie">Disponibilité :</span>
-												<span> 05.01.1990</span>
+												<span> immédiate</span>
 											</li>
 										</ul>
 									</div>
@@ -133,7 +134,7 @@
 							</div>
 						</div>
 						<div class="row skills-row">
-							<div class="col-skills">
+							<div class="col-skills animation-skills">
 								<div class="progress">
 									<span class="title-skill">JavaScript</span>
 									<p class="value-skill">10%</p>
@@ -202,13 +203,35 @@
 					<div class="container-contact-title">
 						<h1 class="template-title">C O N T A C T</h1>
 					</div>
-					<div class="row">
+					<div class="row-contact">
 						<div class="col-1">
-							<div class="info">
-								<div class="addresse">
-
+							<div class="icone-reseaux">
+								<i class="fab fa-facebook"></i>
+								<i class="fab fa-instagram"></i>
+								<i class="fab fa-linkedin"></i>
+							</div>
+						</div>
+						<div class="col-">
+							<div class="form">
+								<div class="form-type">
+									<form>
+										<div>
+											<label for="name">Nom :</label>
+											<input type="text" id="name" name="user_name">
+										</div>
+										<div>
+											<label for="mail">E-mail :</label>
+											<input type="email" id="mail" name="user_mail">
+										</div>
+										<div>
+											<label for="msg">Message :</label>
+											<textarea id="msg" name="user_message"></textarea>
+										</div>
+										<div class="button">
+											<button class="btn-form" type="submit">Envoyer le message</button>
+										</div>
+									</form>
 								</div>
-								<iframe src="https://www.google.com/maps/place/96+Bd+Bessi%C3%A8res,+75017+Paris/@48.896652,2.3161673,17z/data=!3m1!4b1!4m5!3m4!1s0x47e66fa9e5c88119:0x75e95ba431790f9b!8m2!3d48.896652!4d2.318356?hl=fr"></iframe>
 							</div>
 						</div>
 
