--- a/Rush/Pages/jbonnivard.html
+++ b/Rush/Pages/jbonnivard.html
@@ -5,76 +5,245 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<script src="https://kit.fontawesome.com/944fa57a4f.js" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href="../Style/style_profil.css">
-		<title></title>
+		<link rel="stylesheet" href="../Style/style_profil_julien.css">
+		<title>Julien Bonnivard</title>
 	</head>
-		<body>
-			<header>
+	<body id="displayAlexia">
+		<header>
+			<div>
+				<a href="../index.html"><img class="logo" src="../Images/Logo_Rush.png" alt="Logo société RUSH"></a>
+			</div>
 			<nav class="navbar">
+				<!-- <span><i class="fas fa-arrow-circle-left"></i></span> -->
 				<ul class="link">
 					<li class="container">
-						<a href="#">
-							<img src="../Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
+						<a href="agondard.html#main-about-alexia">
+							<img class="imgAlexia imgAlexiapj" src="../Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
+							<h1 class="title">agondard</h1>
+						</a>
+					</li>
+
+					<li class="container">
+						<a href="jbonnivard.html#main-about-julien">
+							<img class="imgJulien imgJulienpj" src="../Images/stickers-masque-casa-de-papel.png" alt="avatar jbonniva"/>
 							<h1 class="title">jbonniva</h1>
 						</a>
 						<ul class="sous_nav">
 							<li><a href="#main-about-julien">About</a></li>
 						</ul>
 						<ul class="sous_nav">
-							<li><a href="#">Expériences & Compétences</a></li>
+							<li><a href="#">Expériences<br>&<br>Compétences</a></li>
 						</ul>
 						<ul class="sous_nav">
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</li>
-
-
-					<li class="container">
-						<a href="./agondard.html#main-about-alexia">
-							<img src="../Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
-							<h1 class="title">agondard</h1>
-						</a>
-					</li>
 				</ul>
-
 			</nav>
 		</header>
 
-		<section id="main-about-julien">
-			<div class="container-about">
-				<div class="about">
-					<h2>A B O U T</h2>
-					<p>
-						Presentation personnelle :
-					</p>
-				</div>
-				<div class="row">
-					<div class="container-photo">
-						<img src="../Images/stickers-masque-casa-de-papel.png" alt="avatar agondard"/>
-					</div>
-					<div class="container-presentation">
-						<h3>
+		<main id="cv">
+
+			<section id="main-about-julien">
+				<div class="container-about">
+					<div class="about">
+						<h1 class="nom-prenom">
 							Julien Bonnivard
-						</h3>
-						<p>Développeur web & Étudiant à 42 Paris</p>
-						<div class="row">
+						</h1>
+						<p><i class="fas fa-quote-left"></i> Ancien chef boulanger qui se reconverti dans l'informatique,<br>contactez moi pour faire du pain, du C mais pas du web.<i class="fas fa-quote-right"></i></p>
+					</div>
+					<div class="row">
+						<div class="container-presentation">
+							<h2>A B O U T</h2>
+
+							<p>Développeur en C & Étudiant à 42 Paris</p>
+							<div class="center">
+								<div class="row">
+									<div class="col">
+										<ul>
+											<li>
+												<span class="categorie">Date de naissance :</span>
+												<span> 19.07.1994</span>
+											</li>
+											<li>
+												<span class="categorie">Website :</span>
+												<span> y'en a pas.</span>
+											</li>
+											<li>
+												<span class="categorie">N° de téléphone :</span>
+												<span> 06.07.11.03.11</span>
+											</li>
+											<li>
+												<span class="categorie">Ville :</span>
+												<span> Paris</span>
+											</li>
+										</ul>
+									</div>
+									<div class="col">
+										<ul>
+											<li>
+												<span class="categorie">Age :</span>
+												<span> 27 ans</span>
+											</li>
+											<li>
+												<span class="categorie">Diplôme :</span>
+												<span> Bac pro boulangerie & Brevet de maitrise boulangerie.</span>
+											</li>
+											<li>
+												<span class="categorie">Email :</span>
+												<span> jbonniva@42.student.fr</span>
+											</li>
+											<li>
+												<span class="categorie">Disponibilité :</span>
+												<span> Toutes les nuits</span>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+			</section>
+
+			<section id="main-skills-alexia" class="skills">
+				<div class="container-skills">
+					<div class="container-skills-title">
+						<h1 class="template-title">C O M P E T E N C E S</h1>
+					</div>
+					<div class="container-all-skills">
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">PAIN</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">C</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills animation-skills">
+								<div class="progress">
+									<span class="title-skill">JavaScript</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row skills-row">
+							<div class="col-skills">
+								<div class="progress">
+									<span class="title-skill">HTML/CSS</span>
+									<p class="value-skill">10%</p>
+									<div class="progress-bar-container">
+										<div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="main-xp-alexia">
+				<div class="experience">
+					<div class="container-experience-title">
+						<h1 class="template-title">E X P E R I E N C E S</h1>
+					</div>
+					<div class="container-all-experience">
+						<div class="container-experience">
+							<div class="container-title">
+								<h3 class="title">Chef Boulanger <br> Demonstrateur en boulangerie francaise a l'international</h3>
+								<h4 class="name">Eric Kayser | Paris</h4>
+							</div>
+							<div class="container-competences">
 							<ul>
-								<li>
-									Website
-									Telephone
-								</li>
+								<li><strong>Creation de pains</strong></li>
+								<li><strong>Creation de viennoiseries</strong></li>
+								<li><strong>Gestion du personnel</strong></li>
+								<li><strong>Vente d'armes</strong></li>
 							</ul>
+
+							</div>
+						</div>
+						<div class="container-experience">
+							<div class="container-title">
+								<h3 class="title">Formateur en boulangerie</h3>
+								<h4 class="name">EBP | Paris</h4>
+							</div>
+							<div class="container-competences">
+								<ul>
+									<li><strong>Formation de jeunes aux metiers de la boulangerie</strong></li>
+									<li><strong>Gestion des stocks</strong></li>
+									<li><strong>Creation de produits originaux a but non commercial</strong></li>
+									<li><strong>Vente de drogues</strong></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="contact">
+				<div class="container-contact">
+					<div class="container-contact-title">
+						<h1 class="template-title">C O N T A C T</h1>
+					</div>
+					<div class="row-contact">
+						<div class="col-1">
+							<div class="icone-reseaux">
+								<i class="fab fa-facebook"></i>
+								<i class="fab fa-instagram"></i>
+								<i class="fab fa-linkedin"></i>
+							</div>
+						</div>
+						<div class="col-">
+							<div class="form">
+								<div class="form-type">
+									<form>
+										<div>
+											<label for="name">Nom :</label>
+											<input type="text" id="name" name="user_name">
+										</div>
+										<div>
+											<label for="mail">E-mail :</label>
+											<input type="email" id="mail" name="user_mail">
+										</div>
+										<div>
+											<label for="msg">Message :</label>
+											<textarea id="msg" name="user_message"></textarea>
+										</div>
+										<div class="button">
+											<button class="btn-form" type="submit">Envoyer le message</button>
+										</div>
+									</form>
+								</div>
+							</div>
 						</div>
 
 					</div>
 				</div>
-		</section>
+			<section>
+		</main>
 		<footer>
 			<div>
 				<p class="copyright text-center">RUSH - 42 | Paris © 2022</p>
 				<p class="copyright text-center"> Designed by Julien & Alexia</p>
 			</div>
 		</footer>
-
 	</body>
 </html>
